--- a/html/index.html
+++ b/html/index.html
@@ -22,9 +22,9 @@
                 <h1>Blog de BTS</h1> 
                 <nav class="head__nav">
                     <ul class="head__nav__li">
-                        <li><a href="../html/index.html">Home</a></li>
-                        <li><a href="../html/bt21.html">bt21</a></li>
-                        <li><a href="../html/tinitan.html">TinyTAN</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="bt21.html">bt21</a></li>
+                        <li><a href="tinitan.html">TinyTAN</a></li>
                     </ul>
                 </nav>  
             </div>    
