--- a/html/bt21.html
+++ b/html/bt21.html
@@ -21,7 +21,7 @@
                 <h1>Blog de BTS</h1> 
                 <nav class="head__nav">
                     <ul class="head__nav__li">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="../index.html">Home</a></li>
                         <li><a href="bt21.html">bt21</a></li>
                         <li><a href="tinitan.html">TinyTAN</a></li>
                     </ul>
