--- a/html/bt21.html
+++ b/html/bt21.html
@@ -69,7 +69,7 @@
                         <div class="ul__items__contenedor">
                             <img class="ul__items-imagen2" src="../img/BT21_logo.png" alt="img. de bt21">
                             <p class="parrafo">
-                                Su historia comienzza cuando el Príncipe TATA, que viene del <em>Planeta BT</em> , ademas de que es demaciado curioso sueña con difundir el amor por toda la galaxia. <br>
+                                Su historia comienza cuando el Príncipe TATA, que viene del <em>Planeta BT</em> , ademas de que es demaciado curioso sueña con difundir el amor por toda la galaxia. <br>
                                 Decidiendo que el destino está en sus manos, TATA convoca al robot guardián <em>VAN </em>para prepararse para un viaje interestelar que por accidente lo lleva al planeta Tierra. <br><br>
                                 Poco después de su llegada, el Príncipe ve un cartel publicitario y llega a la conclución de que el también quiere llagar a ser igual de famoso y reconocido por lo cual va a llegar a convertirse en un <em>UNIVERSTAR</em>.<br> <br>
                                 Al darse cuenta de que necesita reclutar a más miembros para su grupo de idols, se va en su busqueda de ellos. Pronto descubren a <strong>KOYA, RJ, SHOOKY, MANG, CHIMMY y COOKY</strong> 
